--- a/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
@@ -1837,6 +1837,28 @@ spec:
                               This will be `inline` for variables defined in the ClusterClass or the name of a patch defined in the ClusterClass
                               for variables discovered from a DiscoverVariables runtime extensions.
                             type: string
+                          metadata:
+                            description: |-
+                              Metadata is the metadata of a variable.
+                              It can be used to add additional data for higher level tools to
+                              a ClusterClassVariable.
+                            properties:
+                              annotations:
+                                additionalProperties:
+                                  type: string
+                                description: |-
+                                  Annotations is an unstructured key value map that can be used to store and
+                                  retrieve arbitrary metadata.
+                                  They are not queryable.
+                                type: object
+                              labels:
+                                additionalProperties:
+                                  type: string
+                                description: |-
+                                  Map of string keys and values that can be used to organize and categorize
+                                  (scope and select) variables.
+                                type: object
+                            type: object
                           required:
                             description: |-
                               Required specifies if the variable is required.
