--- a/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start.yaml
+++ b/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start.yaml
@@ -21,9 +21,9 @@ spec:
     machineHealthCheck:
       maxUnhealthy: 100%
       unhealthyConditions:
-      - type: e2e.remediation.condition
-        status: "False"
-        timeout: 20s
+        - type: e2e.remediation.condition
+          status: "False"
+          timeout: 20s
   infrastructure:
     ref:
       apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
@@ -50,10 +50,7 @@ spec:
             name: quick-start-default-worker-machinetemplate
       machineHealthCheck:
         maxUnhealthy: 100%
-        unhealthyConditions:
-        - type: e2e.remediation.condition
-          status: "False"
-          timeout: 20s
+        # We are intentionally not setting the 'unhealthyConditions' here to test that the field is optional.
     machinePools:
     - class: default-worker
       template:
