add update verb where patch is already allowed

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -284,6 +284,7 @@ rules:
   - get
   - list
   - patch
+  - update
   - watch
 - apiGroups:
   - ""
@@ -301,6 +302,7 @@ rules:
   - get
   - list
   - patch
+  - update
   - watch
 - apiGroups:
   - ipam.cluster.x-k8s.io
