Set terminationMessagePolicy to FallbackToLogsOnError for all managers
This ensures we have a useful termination message in the Pod if a
manager exits unexpectedly.

--- a/test/infrastructure/docker/config/manager/manager.yaml
+++ b/test/infrastructure/docker/config/manager/manager.yaml
@@ -58,6 +58,7 @@ spec:
             name: dockersock
         securityContext:
           privileged: true
+        terminationMessagePolicy: FallbackToLogsOnError
       terminationGracePeriodSeconds: 10
       serviceAccountName: manager
       tolerations:
